# imageflipper

./: .gitignore  pyproject.toml
imageflipper/: main.py  overresize.py
tests/: test_imageflipper.py
